--- a/my-app/src/components/pages/Inspo/Inspo.module.css
+++ b/my-app/src/components/pages/Inspo/Inspo.module.css
@@ -3,6 +3,13 @@
   margin: 0 auto;
   text-align: center;
 }
+.inspo-header-container {
+  background-image: url('../keyboard.jpg');
+  background-color: var(--main-ic-color);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .inspo-body {
   padding-top: 2%;
   padding-bottom: 3%;
