--- a/my-app/src/components/pages/Learn/Learn.module.css
+++ b/my-app/src/components/pages/Learn/Learn.module.css
@@ -2,6 +2,13 @@
   margin: 0 auto;
   text-align: center;
 }
+.learn-header-container {
+  background-image: url('../keyboard.jpg');
+  background-color: var(--main-ic-color);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .learn-body {
   padding-top: 2%;
   padding-bottom: 3%;
