--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --main-ic-color: #4c36bb;
   --highlight-purple: #b9b4ff;
+  --highlight-pink: #f615ba;
   --highlight-aqua: #79f1df;
   --dark-aqua: #00c2a4;
   --aqua-rgba65: rgba(86, 251, 219, 0.65);
