--- a/my-app/src/components/Footer/Footer.module.css
+++ b/my-app/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer-container {
-  background-color: var(--black);
+  background-color: var(--dark-text-color);
   display: flex;
   flex-direction: row;
   align-items: center;
