--- a/my-app/src/components/pages/About/About.module.css
+++ b/my-app/src/components/pages/About/About.module.css
@@ -4,13 +4,12 @@
   text-align: center;
 }
 .about-body {
-  padding-top: 0;
-  background-image: linear-gradient(to top, #b9b4ff, #ccc6ff, #ded9ff, #efecff, #ffffff);
+  /* padding-top: 0; */
+  /* background-image: linear-gradient(to top, #b9b4ff, #ccc6ff, #ded9ff, #efecff, #ffffff); */
   color: var(--dark-text-color);
   padding-bottom: 4%;
 }
 .about-header-container {
-  margin-top: 800px;
   background-image: url('../keyboard.jpg');
   background-color: var(--main-ic-color);
   background-position: center;
@@ -30,11 +29,11 @@
 .name {
   font-weight: 600;
   font-size: 2rem;
-  color: var(--main-ic-color);
+  color: var(--highlight-pink);
 }
 .profile {
-  width: 25%;
-  border-radius: 3%;
+  width: 22%;
+  border-radius: 8%;
   margin-top: 1%;
   margin-bottom: 1%;
 }
@@ -66,10 +65,10 @@
   padding-bottom: 1%;
 }
 .intro-text a {
-  color: var(--dark-text-color);
+  color: var(--highlight-pink);
   cursor: pointer;
   font-weight: 500;
 }
 .intro-text a:hover {
-  opacity: 0.5;
+  opacity: 0.6;
 }
