--- a/my-app/src/components/pages/Learn/LearnCss.module.css
+++ b/my-app/src/components/pages/Learn/LearnCss.module.css
@@ -1,5 +1,5 @@
 .resources-section {
-  background-image: linear-gradient(to top, #b9b4ff, #ccc6ff, #ded9ff, #efecff, #ffffff);
+  /* background-image: linear-gradient(to top, #b9b4ff, #ccc6ff, #ded9ff, #efecff, #ffffff); */
 }
 .resources-section h1 {
   font-size: 2rem;
