--- a/my-app/src/components/pages/Contact/Contact.module.css
+++ b/my-app/src/components/pages/Contact/Contact.module.css
@@ -3,7 +3,7 @@
   text-align: center;
 }
 .contact-header-container {
-  background-image: url('../keyboard.jpg');
+  background-image: url('../keyboard.webp');
   background-color: var(--main-ic-color);
   background-position: center;
   background-repeat: no-repeat;
