--- a/my-app/src/components/Hero/Hero.module.css
+++ b/my-app/src/components/Hero/Hero.module.css
@@ -1,65 +1,46 @@
 .hero-container {
   position: relative;
 }
-/* .hero-video {
-  height: 100vh;
-  width: 100vw;
-  object-fit: cover;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: -1;
-} */
 .hero-bg-img {
   display: block;
+  position: relative;
   height: 100vh;
   width: 100%;
   object-fit: cover;
-  /* position: fixed; */
-  /* left: 0;
-  top: 0;
-  z-index: -1; */
-  opacity: 0.45;
+  opacity: 1;
 }
 .hero-text {
   position: absolute;
-  z-index: 100;
   text-align: center;
   width: 80%;
   margin: 0 auto;
-  top: 250px;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  top: 25%;
+  left: 10%;
+  color: var(--highlight-pink);
 }
 .hero-text h1 {
-  color: var(--main-ic-color);
   font-size: 3rem;
   margin-bottom: 0.2rem;
 }
 .hero-text h2 {
-  color: var(--dark-text-color);
   font-size: 2rem;
-  opacity: 0.9;
+  color: var(--white);
 }
 .hero-btn {
   display: inline-block;
   padding: 0.5em 3em;
-  /* border: 3px solid rgba(251, 252, 250, 0.7); */
-  border: 3px solid var(--highlight-pink);
+  border: 3px solid rgba(251, 252, 250, 0.9);
+  background-color: rgba(0, 0, 0, 0.75);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  color: var(--white);
   margin-top: 1rem;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 600;
-  color: var(--dark-text-color);
   text-align: center;
   transition: all 0.15s;
   cursor: pointer;
-  background-color: transparent;
-  opacity: 0.8;
 }
 .hero-btn:hover {
-  background-color: var(--highlight-pink);
-  color: var(--white);
-  opacity: 1;
+  background-color: rgba(246, 21, 186, 0.75);
 }
