Update About & Inspo styles

--- a/my-app/src/components/Nav/Nav.module.css
+++ b/my-app/src/components/Nav/Nav.module.css
@@ -33,7 +33,7 @@
   cursor: pointer;
 }
 .link-container:hover {
-  border-top: 3px solid var(--highlight-purple);
+  border-top: 3px solid var(--highlight-orange);
 }
 .router-link {
   text-decoration: none;
