--- a/my-app/src/components/pages/About/About.module.css
+++ b/my-app/src/components/pages/About/About.module.css
@@ -64,10 +64,10 @@
   padding-bottom: 1%;
 }
 .intro-text a {
-  color: var(--highlight-purple);
+  color: var(--highlight-orange);
   cursor: pointer;
   font-weight: 500;
 }
 .intro-text a:hover {
-  opacity: 0.75;
+  opacity: 0.8;
 }
