--- a/my-app/src/components/pages/Inspo/Companies/Companies.module.css
+++ b/my-app/src/components/pages/Inspo/Companies/Companies.module.css
@@ -1,20 +1,20 @@
-.companies {
-  background-color: var(--white);
-}
 .company-cards-wrapper {
+  width: 90%;
+  padding: 2.5% 0;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: 0 auto;
   justify-content: center;
 }
 .company-card {
+  width: 20%;
+  min-width: 300px;
+  margin: 1% 0.5%;
   background-color: var(--dark-text-color);
-  border: 3px solid var(--dark-text-color);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border: 3px solid var(--white);
+  box-shadow: rgba(204, 195, 187, 0.35) 0px 5px 15px;
   border-radius: 1rem;
-  margin: 1%;
-  width: 21%;
   color: var(--black);
   overflow: hidden;
 }
