--- a/my-app/src/components/pages/Learn/ReadCounter.module.css
+++ b/my-app/src/components/pages/Learn/ReadCounter.module.css
@@ -1,23 +1,33 @@
-/*Read Counter*/
-.resource-btn {
-  display: inline-block;
-  padding: 0.5rem;
-  border: 1px solid var(--dark-text-color);
-  border-radius: 20px;
-  margin: 0.3rem 0;
+.counter-wrapper {
+  margin: 0% auto;
+  margin-top: 5%;
+  background-color: var(--white);
+}
+.counter-text {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 0.8rem;
+}
+.btn-container {
+  margin: 0 auto;
+}
+.counter-btn {
+  margin: 0 auto;
+  display: block;
+  padding: 0.5em;
+  border: 1px solid rgba(251, 252, 250, 0.9);
+  border-radius: 1rem;
+  background-color: rgba(0, 0, 0, 0.75);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  color: var(--white);
+  margin-top: 0.3rem;
   text-decoration: none;
-  font-size: 0.7rem;
-  font-weight: 500;
-  color: var(--dark-text-color);
   text-align: center;
   transition: all 0.15s;
+  font-size: 0.8rem;
   cursor: pointer;
-  background-color: rgba(185, 180, 255, 0.6);
 }
-.resource-btn:hover {
-  background-color: rgba(185, 180, 255, 1);
-}
-.read-counter-text {
-  color: var(--dark-text-color);
-  font-size: 0.7rem;
+.counter-btn:hover {
+  background-color: rgba(246, 21, 186, 0.9);
 }
