--- a/my-app/src/components/pages/Learn/Learn.module.css
+++ b/my-app/src/components/pages/Learn/Learn.module.css
@@ -5,9 +5,9 @@
   color: var(--white);
 }
 .learn-header-container {
-  background-image: url('../keyboard.webp');
+  background-image: url('../keyboard-dark.webp');
   background-color: var(--highlight-pink);
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
 }
