--- a/my-app/src/components/pages/Inspo/Inspo.module.css
+++ b/my-app/src/components/pages/Inspo/Inspo.module.css
@@ -4,9 +4,9 @@
   background-color: var(--black);
 }
 .inspo-header-container {
-  background-image: url('../keyboard.webp');
+  background-image: url('../keyboard-dark.webp');
   background-color: var(--highlight-pink);
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
 }
