--- a/my-app/src/components/pages/Learn/LearnHTML/LearnHtml.module.css
+++ b/my-app/src/components/pages/Learn/LearnHTML/LearnHtml.module.css
@@ -3,13 +3,19 @@
   margin: 0 auto;
   background-color: var(--white);
 }
+.html-logo {
+  display: block;
+  width: 15%;
+  margin-left: auto;
+  margin-right: auto;
+}
 .resources h1 {
   width: 70%;
   margin: 0 auto;
-  margin-top: 3%;
+  margin-top: 1%;
   padding-top: 1%;
   text-align: center;
-  border-top: 5px solid var(--highlight-orange);
+  border-top: 5px solid var(--html-orange);
 }
 .resource-cards-wrapper {
   padding: 2.5% 0;
@@ -31,8 +37,8 @@
   overflow: hidden;
 }
 .resource-card:hover {
-  border: 3px solid var(--highlight-orange);
-  background-color: var(--highlight-orange);
+  border: 3px solid var(--highlight-pink);
+  background-color: var(--highlight-pink);
 }
 .resource-header {
   background-color: var(--white);
@@ -57,7 +63,7 @@
 }
 .video-container {
   position: relative;
-  background-color: var(--white);
+  /* background-color: var(--white); */
   cursor: pointer;
 }
 .resource-video {
@@ -80,22 +86,19 @@
   color: var(--dark-text-color);
 }
 .img-container {
-  padding: 5% 0;
-  height: 100%;
+  /* height: 100%; */
   position: relative;
-  cursor: pointer;
   background-color: var(--white);
 }
 .resource-img {
-  width: 50%;
-  margin: 0 auto;
   display: block;
   position: relative;
+  width: 100%;
 }
 .resource-description {
   position: absolute;
-  top: 15%;
-  left: 5%;
+  top: 10%;
+  left: 10%;
   background-color: rgba(255, 255, 255, 0.8);
   width: 80%;
   padding: 5%;
