--- a/my-app/src/components/pages/Learn/ReadCounter.module.css
+++ b/my-app/src/components/pages/Learn/ReadCounter.module.css
@@ -1,6 +1,7 @@
 .counter-wrapper {
   margin: 0% auto;
-  margin-top: 5%;
+  padding: 2.5% 1%;
+  margin-bottom: 2%;
   background-color: var(--white);
 }
 .counter-text {
@@ -15,12 +16,12 @@
 .counter-btn {
   margin: 0 auto;
   display: block;
-  padding: 0.5em;
-  border: 1px solid rgba(251, 252, 250, 0.9);
+  padding: 0.55em 0.7em;
+  border: 1px solid var(--dark-text-color);
   border-radius: 1rem;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(246, 21, 186, 0.3);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  color: var(--white);
+  color: var(--dark-text-color);
   margin-top: 0.3rem;
   text-decoration: none;
   text-align: center;
@@ -29,5 +30,7 @@
   cursor: pointer;
 }
 .counter-btn:hover {
-  background-color: rgba(246, 21, 186, 0.9);
+  background-color: rgba(246, 21, 186, 0.85);
+  border: 1px solid var(--dark-text-color);
+  color: var(--dark-text-color);
 }
