--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -2,45 +2,24 @@
   --main-ic-color: #4c36bb;
   --highlight-purple: #b9b4ff;
   --highlight-pink: #f615ba;
-  /* FF006E */
   --highlight-blue: #3a86ff;
   --highlight-yellow: #ffbe0b;
-  /* --highlight-orange: #fb5607; */
   --highlight-orange: #ffa400;
   --light-black8: rgba(0, 0, 0, 0.8);
-  /* --light-black9: rgba(0, 0, 0, 0.9); */
   --dark-text-color: rgba(0, 0, 0, 0.9);
-  /* background-color: rgba(255, 164, 0, 0.9); */
-  /* background-color: rgba(58, 134, 255, 0.8); */
-  /* background-color: rgba(255, 190, 11, 0.9); */
-  /* background-color: rgba(251, 86, 7, 0.9); */
-  /* rgb pink rgb(246,21,186) */
+  /* pink rgb(246,21,186) */
   /* white rgb rgb(251,252,250) */
 
   --highlight-aqua: #79f1df;
   --dark-aqua: #00c2a4;
   --aqua-rgba65: rgba(86, 251, 219, 0.65);
   --aqua-rgba90: rgba(86, 251, 219, 0.9);
-  /* --dark-text-color: #4a4453; */
   --light-text-color: #969a97;
   --white: #fbfcfa;
   --black: #14110f;
-  --html-orange: #ffa500;
+  --html-orange: #f06529;
   --css-blue: #264de4;
   --js-yellow: #f7df1e;
-  /* --highlight-aqua: #56fbdb; */
-  /* --highlight-blue: #00c7f3; */
-  /* --highlight-pink: #f90093; */
-  /* --secondary: #0089f6; */
-  /* --highlight-purple: #c39bff; */
-  /*#030104*/
-  /* --light-text-color: #dfebf7; */
-  /* --dark-text-color: #230c33; */
-  /* --secondary: #9984d4; */
-  /* --dark-text-color: #091e51; */
-  /* --highlight-blue: #1dbef5; */
-  /* --light-text-color: #f5efff; */
-  /* --highlight-purple: #592e83; */
 }
 
 * {
