--- a/my-app/src/components/pages/Learn/LearnJs/LearnJs.module.css
+++ b/my-app/src/components/pages/Learn/LearnJs/LearnJs.module.css
@@ -1,7 +1,118 @@
-.resources-section {
-  /* background-image: linear-gradient(to top, #b9b4ff, #ccc6ff, #ded9ff, #efecff, #ffffff); */
+.resources {
+  width: 90%;
+  margin: 0 auto;
+  background-color: var(--white);
 }
-.resources-section h1 {
+.html-logo {
+  display: block;
+  width: 15%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.resources h1 {
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 1%;
+  padding-top: 1%;
+  text-align: center;
+  border-top: 5px solid var(--js-yellow);
+}
+.resource-cards-wrapper {
+  padding: 2.5% 0;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.resource-card {
+  width: 20%;
+  min-width: 300px;
+  margin: 1% 0.5%;
+  background-color: var(--dark-text-color);
+  color: var(--black);
+  border: 3px solid var(--dark-text-color);
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  overflow: hidden;
+}
+.resource-card:hover {
+  border: 3px solid var(--highlight-pink);
+  background-color: var(--highlight-pink);
+}
+.resource-header {
+  background-color: var(--white);
+  margin: 0 auto;
+  padding: 2%;
+  text-align: center;
+}
+.resource-name {
+  color: var(---light-black9);
+  text-decoration: none;
+  padding-bottom: 1%;
+  font-size: 1.2rem;
+}
+.resource-by {
+  font-size: 0.9rem;
+}
+.resource-details {
+  color: var(--white);
+  font-size: 0.85rem;
+  padding: 2%;
+  text-align: center;
+}
+.video-container {
+  position: relative;
+  /* background-color: var(--white); */
+  cursor: pointer;
+}
+.resource-video {
+  width: 100%;
+}
+.video-resource-description {
+  position: absolute;
+  top: 10%;
+  left: 5%;
+  background-color: rgba(255, 255, 255, 0.8);
+  width: 90%;
+  padding: 5%;
+  border-radius: 1rem;
+  max-height: 160px;
+  font-size: 0.8rem;
+  font-weight: 500;
+  line-height: 1.2;
+  overflow: auto;
+  text-align: center;
+  color: var(--dark-text-color);
+}
+.img-container {
+  /* height: 100%; */
+  position: relative;
+  background-color: var(--white);
+}
+.resource-img {
+  display: block;
+  position: relative;
+  width: 100%;
+}
+.resource-description {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  background-color: rgba(255, 255, 255, 0.8);
+  width: 80%;
+  padding: 5%;
+  border-radius: 1rem;
+  max-height: 160px;
+  font-size: 0.8rem;
+  font-weight: 500;
+  line-height: 1.2;
+  overflow: auto;
+  text-align: center;
+  color: var(--dark-text-color);
+}
+
+/* .resources-section h1 {
   font-size: 2rem;
   width: 90%;
   text-align: center;
@@ -80,4 +191,4 @@
 .practice-img:hover {
   border: none;
   background-color: rgba(247, 223, 30, 0.7);
-}
+} */
