--- a/my-app/src/components/pages/Learn/ReadCounter.module.css
+++ b/my-app/src/components/pages/Learn/ReadCounter.module.css
@@ -19,7 +19,7 @@
   padding: 0.55em 0.7em;
   border: 1px solid var(--dark-text-color);
   border-radius: 1rem;
-  background-color: rgba(246, 21, 186, 0.3);
+  background-color: var(--white);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   color: var(--dark-text-color);
   margin-top: 0.3rem;
@@ -30,7 +30,6 @@
   cursor: pointer;
 }
 .counter-btn:hover {
-  background-color: rgba(246, 21, 186, 0.85);
-  border: 1px solid var(--dark-text-color);
-  color: var(--dark-text-color);
+  background-color: var(--dark-text-color);
+  color: var(--white);
 }
